--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/brownies.html" target="_blank" rel="noopener noreferrer">Brownies</a>\
+        <a href="./recipes/cajun-pasta.html" target="_blank" rel="noopener noreferrer">Cajun Pasta</a>
+        <a href="./recipes/gochujang-gnocchi.html" target="_blank" rel="noopener noreferrer">Gochujang Gnocchi</a>
     </body>
 </html>
