Seperate index.html recipe links
Allows better readability

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/brownies.html" target="_blank" rel="noopener noreferrer">Brownies</a>\
-        <a href="./recipes/cajun-pasta.html" target="_blank" rel="noopener noreferrer">Cajun Pasta</a>
-        <a href="./recipes/gochujang-gnocchi.html" target="_blank" rel="noopener noreferrer">Gochujang Gnocchi</a>
+        <p><a href="./recipes/brownies.html" target="_blank" rel="noopener noreferrer">Brownies</a></p>
+        <p><a href="./recipes/cajun-pasta.html" target="_blank" rel="noopener noreferrer">Cajun Pasta</a></p>
+        <p><a href="./recipes/gochujang-gnocchi.html" target="_blank" rel="noopener noreferrer">Gochujang Gnocchi</a></p>
     </body>
 </html>
