--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -8,5 +8,8 @@
 
     <body>
         <h1>Brownies</h1>
+        <img src="../recipe-images/brownies.jpeg" alt="Fudgy chocolate brownies" width="350">
+        <p>If you want the fudgiest and chocolatiest brownies you've ever had, 
+            this recipe is just the thing for you</p>
     </body>
 </html>
