Adds image and description to cajun-pasta.html

--- a/recipes/cajun-pasta.html
+++ b/recipes/cajun-pasta.html
@@ -8,5 +8,8 @@
 
     <body>
         <h1>Cajun Pasta</h1>
+        <img src="../recipe-images/cajun-pasta.jpeg" alt="Penne pasta with chicken in a cajun cream sauce" width="350">
+        <p>If you're looking for an easy, semi-spicy, highly-delcious chicken recipe, 
+            this one is for you!</p>
     </body>
 </html>
