Add image and description to gochujang-gnocchi.html

--- a/recipes/gochujang-gnocchi.html
+++ b/recipes/gochujang-gnocchi.html
@@ -8,5 +8,9 @@
 
     <body>
         <h1>Gochujang Gnocchi</h1>
+        <img src="../recipe-images/gochujang-gnocchi.jpeg" alt="Gnocchi in a red gochujang sauce surrounded by grape tomatoes" width="350">
+        <p>If you're looking for a good, savory, and short-to-put-together recipe
+            to make, this is for you!
+        </p>
     </body>
 </html>
