--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -11,5 +11,27 @@
         <img src="../recipe-images/brownies.jpeg" alt="Fudgy chocolate brownies" width="150">
         <p>If you want the fudgiest and chocolatiest brownies you've ever had, 
             this recipe is just the thing for you</p>
+        <ul>
+            <li>2 eggs</li>
+            <li>Powdered sugar</li>
+            <li>Unsweetened cocoa powder</li>
+            <li>Oil</li>
+            <li>Vanilla extract</li>
+        </ul>
+
+        <ol>
+            <li>Combine the sugar, flour, powdered sugar,
+                cocoa powder, chocolate chips, and salt in a medium bowl
+            </li>
+            <li>Whisk together the eggs, olive oil, and water in a largw bowl</li>
+            <li>Combine the wet and dry ingredients in the larger of the two bowls</li>
+            <li>Line an 8x8 inch baking pan with parchment paper</li>
+            <li>Pour batter in pan</li>
+            <li>Bake in a 325-degree over for 40-45 minutes</li>
+            <li>Let cool, and then cut and serve!</li>
+        </ol>
+
+        <p>These sweet treats are delicious and perfect to be fridgerated and saved for a later date! Enjoy!</p>
+        <h6>Recipe from <a href="https://www.loveandlemons.com/brownies-recipe/" target="_blank" ref="noopener noreferrer">Love and Lemons</a></h6>
     </body>
 </html>
