Implement ingredient and instruction list

--- a/recipes/cajun-pasta.html
+++ b/recipes/cajun-pasta.html
@@ -11,5 +11,35 @@
         <img src="../recipe-images/cajun-pasta.jpeg" alt="Penne pasta with chicken in a cajun cream sauce" width="150">
         <p>If you're looking for an easy, semi-spicy, highly-delcious chicken recipe, 
             this one is for you!</p>
+        <ul>
+            <li>Pasta of your choosing</li>
+            <li>Chicken</li>
+            <li>Cream</li>
+            <li>Garlic</li>
+            <li>Onion</li>
+            <li>Roasted red peppers</li>
+            <li>Spinach</li>
+            <li>Cajun seasoning</li>
+            <li>Paprika</li>
+            <li>Ground mustard seed</li>
+            <li>White pepper</li>
+            <li>Lemon juice</li>
+            <li>Pecorino remano cheese</li>
+        </ul>
+
+        <ol>
+            <li>Cooked cubes and marinated chicken in 1tbs of oil</li>
+            <li>Remove cooked chicken from pan</li>
+            <li>In same pan, saute onions in chicken juices until translucent</li>
+            <li>Add minced garlic and saute until golden brown</li>
+            <li>Add spincach and saute</li>
+            <li>Add some of the cajun seasoning and the roasted red peppers</li>
+            <li>Add pasta and stir as to gain flavor</li>
+            <li>Quickly add cream and rest of seasonings</li>
+            <li>Let cream come to a boil, then add lemon juice and some pecorino romano</li>
+            <li>Cook until cream reduces into a thick sauce</li>
+        </ol>
+
+        <p>This meal reheats extremely well, and is the perfect family meal for any tired adult</p>
     </body>
 </html>
