Fix typo in 'large'

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -23,7 +23,7 @@
             <li>Combine the sugar, flour, powdered sugar,
                 cocoa powder, chocolate chips, and salt in a medium bowl
             </li>
-            <li>Whisk together the eggs, olive oil, and water in a largw bowl</li>
+            <li>Whisk together the eggs, olive oil, and water in a large bowl</li>
             <li>Combine the wet and dry ingredients in the larger of the two bowls</li>
             <li>Line an 8x8 inch baking pan with parchment paper</li>
             <li>Pour batter in pan</li>
