Implement ingredient and instruction

--- a/recipes/gochujang-gnocchi.html
+++ b/recipes/gochujang-gnocchi.html
@@ -12,5 +12,28 @@
         <p>If you're looking for a good, savory, and short-to-put-together recipe
             to make, this is for you!
         </p>
+
+        <ul>
+            <li>Gnocchi</li>
+            <li>Gochujang chili paste</li>
+            <li>Tomato paste</li>
+            <li>Cream</li>
+            <li>Minced garlic</li>
+            <li>Diced shallot</li>
+            <li>Pecorino romano cheese</li>
+        </ul>
+
+        <ol>
+            <li>Saute diced shallot in a skillet until translucent</li>
+            <li>Add diced garlic and cook until golden brown</li>
+            <li>Add equal parts gochujang and tomato paste and saute until a rusty color</li>
+            <li>Add cream and bring to a low boil</li>
+            <li>Add gnocchi and pecorino romano</li>
+            <li>Once cream sauce has reduce and gnocchi has softened, serve hot!</li>
+        </ol>
+
+        <p>A delicious recipe that is great for date nights!
+            Gnocchi always has a classy appeal that is sure to impress anyone.
+        </p>
     </body>
 </html>
