--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Brownies</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
