Add headings for recipe sections

--- a/recipes/cajun-pasta.html
+++ b/recipes/cajun-pasta.html
@@ -12,6 +12,8 @@
         <img src="../recipe-images/cajun-pasta.jpeg" alt="Penne pasta with chicken in a cajun cream sauce" width="150">
         <p>If you're looking for an easy, semi-spicy, highly-delcious chicken recipe, 
             this one is for you!</p>
+
+        <h3>Ingredients</h3>
         <ul>
             <li>Pasta of your choosing</li>
             <li>Chicken</li>
@@ -28,6 +30,7 @@
             <li>Pecorino remano cheese</li>
         </ul>
 
+        <h3>Instructions</h3>
         <ol>
             <li>Cooked cubes and marinated chicken in 1tbs of oil</li>
             <li>Remove cooked chicken from pan</li>
