--- a/recipes/gochujang-gnocchi.html
+++ b/recipes/gochujang-gnocchi.html
@@ -14,6 +14,7 @@
             to make, this is for you!
         </p>
 
+        <h3>Ingredients</h3>
         <ul>
             <li>Gnocchi</li>
             <li>Gochujang chili paste</li>
@@ -24,6 +25,7 @@
             <li>Pecorino romano cheese</li>
         </ul>
 
+        <h3>Instructions</h3>
         <ol>
             <li>Saute diced shallot in a skillet until translucent</li>
             <li>Add diced garlic and cook until golden brown</li>
