--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -12,6 +12,8 @@
         <img src="../recipe-images/brownies.jpeg" alt="Fudgy chocolate brownies" width="150">
         <p>If you want the fudgiest and chocolatiest brownies you've ever had, 
             this recipe is just the thing for you</p>
+
+        <h3>Ingredients</h3>
         <ul>
             <li>2 eggs</li>
             <li>Powdered sugar</li>
@@ -20,6 +22,7 @@
             <li>Vanilla extract</li>
         </ul>
 
+        <h3>Instructions</h3>
         <ol>
             <li>Combine the sugar, flour, powdered sugar,
                 cocoa powder, chocolate chips, and salt in a medium bowl
