Apply decoration to index.html
Provides a more visually apealling homepage

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="index-style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <p><a href="./recipes/brownies.html" target="_blank" rel="noopener noreferrer">Brownies</a></p>
-        <p><a href="./recipes/cajun-pasta.html" target="_blank" rel="noopener noreferrer">Cajun Pasta</a></p>
-        <p><a href="./recipes/gochujang-gnocchi.html" target="_blank" rel="noopener noreferrer">Gochujang Gnocchi</a></p>
+        
+        <div id="background">
+            <h1 id="title">Odin Recipes</h1>
+            <div class="recipe-list">
+                <a class="recipe" href="./recipes/brownies.html" target="_blank" rel="noopener noreferrer">Brownies</a>
+                <a class="recipe" href="./recipes/cajun-pasta.html" target="_blank" rel="noopener noreferrer">Cajun Pasta</a>
+                <a class="recipe" href="./recipes/gochujang-gnocchi.html" target="_blank" rel="noopener noreferrer">Gochujang Gnocchi</a>
+            </div>
+        </div>
     </body>
 </html>
